--- a/forex/sass/global/base.scss
+++ b/forex/sass/global/base.scss
@@ -9,10 +9,10 @@ body {
   margin: auto;
 }
 
-// .container__temp {
-//   width: 70%;
-//   margin: auto;
-// }
+.container--temp {
+  width: 50%;
+  margin: auto;
+}
 
 @media screen and ($tablet-widths) {
   .container {
