--- a/forex/sass/style.scss
+++ b/forex/sass/style.scss
@@ -35,3 +35,9 @@
 @import 'blocks/security';
 @import 'blocks/trading-specification';
 @import 'blocks/platforms';
+@import 'blocks/meta';
+@import 'blocks/features';
+@import 'blocks/trader';
+@import 'blocks/edge';
+@import 'blocks/desktop';
+@import 'blocks/mobile';
