--- a/forex/templates/platforms.html
+++ b/forex/templates/platforms.html
@@ -67,21 +67,25 @@
     </div>
   </section>
   <section class="platforms">
-    <div class="container">
-      <section class="platforms__trading">
-        <img src="../img/platforms-monitor.png" alt="">
-        <div class="platforms__meta">
-          <h2>Trading Platforms</h2>
-          <p>Forex24 pioneered the offering of an MT4 platform with trading execution quality in mind.</p>
-          <p>Trade on MT4 with No Requotes, No Rejections with flexible leverage ranging from 1:1 – to 400:1</p>
-          <img src="../img/platforms-meta.png" alt="">
-          <p>Download the industry’s favorite forex trading platform on your PC, tablet or mobile and enjoy:</p>
+    <section class="meta">
+      <div class="container">
+        <div class="meta__flex">
+          <div class="meta__left"></div>
+          <div class="meta__right">
+            <h2>Trading Platforms</h2>
+            <p>Forex24 pioneered the offering of an MT4 platform with trading execution quality in mind.</p>
+            <p>Trade on MT4 with No Requotes, No Rejections with flexible leverage ranging from 1:1 – to 400:1</p>
+            <div class="meta__trader"></div>
+            <p>Download the industry’s favorite forex trading platform on your PC, tablet or mobile and enjoy:</p>
+          </div>
         </div>
-      </section>
-      <section class="platforms__features">
+      </div>
+    </section>
+    <section class="features">
+      <div class="container">
         <h3>Forex24 MT4 Features</h3>
-        <div class="platforms__flex">
-          <div class="platforms__list">
+        <div class="features__flex">
+          <div class="features__list">
             <ul>
               <li>Spreads as low as 0.3 pips</li>
               <li>Pioneering Automated Trading system – Expert Advisors</li>
@@ -93,25 +97,27 @@
               <li>VPS Functionality</li>
               <li>Multilingual Platform</li>
               <li>News feeds directly into the trading platform</li>
-              <li>Trailing stop loss <facility></facility></li>
+              <li>Trailing stop loss facility</li>
             </ul>
           </div>
-          <div class="platforms__download">
-            <div class="platforms__box">
+          <div class="features__download">
+            <div class="features__box">
               <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
-              <a class="platforms__start" href="#">Download</a>
+              <a class="features__start" href="#">Download</a>
             </div>
-            <div class="platforms__box">
+            <div class="features__box">
               <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
-              <a class="platforms__start" href="#">Lounch</a>
+              <a class="features__start" href="#">Lounch</a>
             </div>
           </div>
         </div>
-      </section>
-      <section class="platforms__trader">
+      </div>
+    </section>
+    <section class="trader">
+      <div class="container">
         <h3>Webtrader</h3>
         <b>Smart features</b>
-        <div class="platforms__flex  platforms__list  platforms__flex--trader ">
+        <div class="trader__list">
           <ul>
             <li>Filter instruments by keywords or securities group, or define your own asset classes.</li>
             <li>With smart one-click trading mode, traders can: set size, Take Profit/Stop Loss and open orders with unparalleled speed.</li>
@@ -125,8 +131,10 @@
             <li>Summary tab groups open positions by symbol and displays total pips and Profit and Loss. Account transactions are separated from Order History for more convenient viewing.</li>
           </ul>
         </div>
-      </section>
-      <section class="platforms__adv">
+      </div>
+    </section>
+    <section class="edge">
+      <div class="container">
         <h3>Advantages</h3>
         <ul>
           <li>Works in any browser – No Downloads, Flash or Java required</li>
@@ -135,11 +143,67 @@
           <li>Advanced ‘Close All’ functionality</li>
           <li>Statistics panel tracks balance, Profit and Loss, drawdown percentage and more</li>
         </ul>
-      </section>
-    </div>
-    <section class="platforms__desktop">
+      </div>
+    </section>
+    <section class="desktop">
       <div class="container">
-        
+        <div class="desktop__flex">
+          <div class="desktop__right">
+            <h4>Mt4 Desktop</h4>
+            <p>MetaTrader is the most popular front-end application in the industry. Forex24 MT4 has taken the MetaTrader MT4 platform and introduced its liquidity to create a user-friendly front-end trading interface with interbank liquidity and fast execution.</p>
+            <b>Benefits:</b>
+            <div class="desktop__list">
+              <ul>
+                <li>Ease of use through its user friendly interface</li>
+                <li>Multiple charting and analysis</li>
+                <li>Multilingual platform</li>
+                <li>Real time client account summary</li>
+                <li>It requires NO download. Simply login and trade from your browser</li>
+              </ul>
+              <ul>
+                <li>One-Click Trading allows you to place trades in a mouse click</li>
+                <li>Get real-time quotes in MarketWatch</li>
+                <li>9 chart time frames</li>
+                <li>Trading from charts & monitor active orders on the chart</li>
+                <li>Advanced analysis tools</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="mobile">
+      <div class="container  container--temp">
+        <h2>Mobile</h2>
+        <b>User-friendly and Intuitive for Novices and Pros</b>
+        <p>Follow your trades on your mobile device of choice— iOS, Android & Windows Phone. Forex24 Global has developed this state of the art Mobile Application to be versatile enough to meet the needs of both beginners and seasoned professionals alike. You will enjoy using the clean, straightforward and intuitively designed user interface.</p>
+        <div class="mobile__flex">
+          <div class="mobile__left">
+            <b>Auto-Update</b>
+            <p>The Forex24 Global Mobile App performs updatesи automatically, ensuring that the user is always up to date with the latest version of the platform.</p>
+          </div>
+          <div class="mobile__right">
+            <b>Customizable Menus</b>
+            <p>Menus in the app are customizable to meet the specific needs of our clients.</p>
+          </div>
+        </div>
+        <!-- <div class="mobile__flex"> -->
+          <div class="mobile__first">
+            <b></b>
+            <p></p>
+            <div class="features__download">
+              <div class="features__box">
+                <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
+                <a class="features__start" href="#">Download</a>
+              </div>
+              <div class="features__box">
+                <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
+                <a class="features__start" href="#">Lounch</a>
+              </div>
+            </div>
+          </div>
+          <div class="mobile__second"></div>
+        <!-- </div> -->
       </div>
     </section>
   </section>
