--- a/forex/templates/platforms.html
+++ b/forex/templates/platforms.html
@@ -107,7 +107,7 @@
             </div>
             <div class="features__box">
               <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
-              <a class="features__start" href="#">Lounch</a>
+              <a class="features__start" href="#">Launch</a>
             </div>
           </div>
         </div>
@@ -134,7 +134,6 @@
       </div>
     </section>
     <section class="edge">
-      <div class="container">
         <h3>Advantages</h3>
         <ul>
           <li>Works in any browser – No Downloads, Flash or Java required</li>
@@ -143,7 +142,6 @@
           <li>Advanced ‘Close All’ functionality</li>
           <li>Statistics panel tracks balance, Profit and Loss, drawdown percentage and more</li>
         </ul>
-      </div>
     </section>
     <section class="desktop">
       <div class="container">
@@ -176,8 +174,8 @@
       <div class="container  container--temp">
         <h2>Mobile</h2>
         <b>User-friendly and Intuitive for Novices and Pros</b>
-        <p>Follow your trades on your mobile device of choice— iOS, Android & Windows Phone. Forex24 Global has developed this state of the art Mobile Application to be versatile enough to meet the needs of both beginners and seasoned professionals alike. You will enjoy using the clean, straightforward and intuitively designed user interface.</p>
-        <div class="mobile__flex">
+        <p class="mobile__title">Follow your trades on your mobile device of choice— iOS, Android & Windows Phone. Forex24 Global has developed this state of the art Mobile Application to be versatile enough to meet the needs of both beginners and seasoned professionals alike. You will enjoy using the clean, straightforward and intuitively designed user interface.</p>
+        <div class="mobile__flex-first">
           <div class="mobile__left">
             <b>Auto-Update</b>
             <p>The Forex24 Global Mobile App performs updatesи automatically, ensuring that the user is always up to date with the latest version of the platform.</p>
@@ -187,23 +185,23 @@
             <p>Menus in the app are customizable to meet the specific needs of our clients.</p>
           </div>
         </div>
-        <!-- <div class="mobile__flex"> -->
-          <div class="mobile__first">
-            <b></b>
-            <p></p>
-            <div class="features__download">
-              <div class="features__box">
-                <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
-                <a class="features__start" href="#">Download</a>
-              </div>
-              <div class="features__box">
-                <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
-                <a class="features__start" href="#">Lounch</a>
-              </div>
+      </div>
+      <div class="mobile__flex-second">
+        <div class="mobile__first">
+          <b>Touch-Friendly</b>
+          <p>Whether it’s Bollinger Bands, RSI, or MACD— there are 60 technical indicators built directly into the App. Technical indicators are built on algorithms that allows the trader to visually analyze chart data to spot trends and ultimately to forecast the direction of an instrument. Indicators function as a critical element to any successful technical analysis.</p>
+          <div class="mobile__flex-box">
+            <div class="mobile__box">
+              <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
+              <a class="features__start" href="#">Download</a>
+            </div>
+            <div class="mobile__box">
+              <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
+              <a class="features__start" href="#">Launch</a>
             </div>
           </div>
-          <div class="mobile__second"></div>
-        <!-- </div> -->
+        </div>
+        <div class="mobile__second"></div>
       </div>
     </section>
   </section>
