--- a/forex/sass/blocks/meta.scss
+++ b/forex/sass/blocks/meta.scss
@@ -3,30 +3,30 @@
   
   & h2 {
     color: #2f2861;
-    font-size: 25px;
     text-transform: uppercase;
   }
   
   & p {
-    width: 400px;
+    width: 390px;
     color: #323232;
-    font-weight: bold;
   }
 }
 
 .meta__flex {
   display: flex;
   justify-content: space-between;
+  padding-bottom: 50px;
 }
 
 .meta__left {
-  width: 640px;
-  height: 428px;
-  background: url('../img/meta-monitor.png') no-repeat top;
+  width: 550px;
+  height: 368px;
+  background: url('../img/meta-monitor.png') no-repeat center;
   background-size: contain;
 }
 
 .meta__trader {
-  height: 84px;
-  background: url('../img/meta-trader.png') no-repeat top;
+  // width: 300px;
+  height: 76px;
+  background: url('../img/meta-trader.png') no-repeat right;
 }
