--- a/forex/sass/blocks/platforms.scss
+++ b/forex/sass/blocks/platforms.scss
@@ -1,5 +1,5 @@
 .platforms {
-  padding: 50px 0;
+  padding-top: 50px;
   background: url('../img/platforms-bg.png') no-repeat top;
   
   & h2 {
@@ -13,9 +13,8 @@
   }
   
   & ul {
-    width: 300px;
+    width: 280px;
     color: #b7b5c9;
-    font-size: 18px;
     font-weight: 100;
     list-style-image: url('../img/li.png');
   }
