--- a/forex/sass/blocks/trader.scss
+++ b/forex/sass/blocks/trader.scss
@@ -1,5 +1,5 @@
 .trader {
-  margin-left: 100px;
+  margin-left: 50px;
   
   & h3 {
     margin-bottom: 10px;
@@ -13,4 +13,5 @@
 .trader__list {
   display: flex;
   justify-content: flex-start;
+  padding-bottom: 50px;
 }
