--- a/forex/templates/platforms.html
+++ b/forex/templates/platforms.html
@@ -196,7 +196,7 @@
               <a class="features__start" href="#">Download</a>
             </div>
             <div class="mobile__box">
-              <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
+              <p><b>MT4 Webtrader</b><br><a href="#">Read more</a></p>
               <a class="features__start" href="#">Launch</a>
             </div>
           </div>
