--- a/forex/sass/blocks/mobile.scss
+++ b/forex/sass/blocks/mobile.scss
@@ -48,7 +48,7 @@
 .mobile__flex-second {
   display: flex;
   justify-content: space-between;
-  width: 1200px;
+  width: 1100px;
   margin: auto;
   padding-top: 70px;
 }
@@ -61,18 +61,18 @@
   }
   
   & p {
-    width: 500px;
+    width: 400px;
   }
 }
 
 .mobile__flex-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding-top: 50px;
 }
 
 .mobile__box {
-  width: 200px;
+  width: 180px;
   padding-top: 130px;
   text-align: center;
   background: url('../img/mobile-download.png') no-repeat top;
@@ -85,6 +85,7 @@
   & p {
     width: auto;
     margin-bottom: 30px;
+    opacity: 1;
   }
   
   & a {
@@ -102,7 +103,8 @@
 }
 
 .mobile__second {
-  width: 677px;
-  height: 642px;
-  background: url('../img/mobile-right.png');
+  width: 600px;
+  height: 569px;
+  background: url('../img/mobile-right.png') no-repeat bottom;
+  background-size: contain;
 }
