--- a/forex/sass/blocks/edge.scss
+++ b/forex/sass/blocks/edge.scss
@@ -7,3 +7,15 @@
     width: auto;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .edge {
+    width: auto;  
+    
+    & h3 {
+      text-align: center;
+    }
+  }
+}
